Experiment with direct block on and processing
Instead of

1. Kickstart
2. StatusPoller
3. Fetch

We can just start doing /npact/getpdf/$PATH that does the sequence

re #992 (1)

--- a/npactflask/npactflask/templates/processing.html
+++ b/npactflask/npactflask/templates/processing.html
@@ -34,7 +34,9 @@
   <div npact-graph-page ></div>
 
   <script type="text/javascript">
-    angular.module('npact')
+  angular.module('npact')
+      .constant('BASE_URL', '{{BASE_URL}}')
+      .constant('PATH', '{{PATH}}')
       .constant('STATUS_BASE_URL', '{{status_base}}')
       .constant('KICKSTART_URL', '{{kickstart}}')
       .constant('TRANSLATE_URL', '{{translate}}')
