--- a/npactflask/npactflask/templates/base.html
+++ b/npactflask/npactflask/templates/base.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html >
 <html>
   <head>
-
-    <style>
-    </style>  
-
     <title>{% block title %}University of Florida Genetics Institute{% endblock title %}</title>
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css?ver=3.3.5">
     <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/print.css') }}" media="print">
     <script type="text/javascript" src="{{ vSTATIC('bower_components/jquery/dist/jquery.min.js') }}"></script>
-    
     {% block addScript %}{% endblock %}
   </head>
   <body ng-app="npact">
@@ -27,8 +22,8 @@
         <div id="priNav">
           <h2>Primary Navigation</h2>
           <ul>
-            <li><a href="/npact">Home</a></li>
-            <li><a href="about">About</a></li>
+            <li><a href="{{url_for('start')}}">Home</a></li>
+            <li><a href="{{url_for('about')}}">About</a></li>
             <li><a href="http://compbio.ufl.edu/software/npact/">Downloads</a></li>
           </ul>
         </div>
@@ -46,9 +41,9 @@
             <li><a href="#">Eric Hernandez (Programmer)</a></li>
           </ul>
           {% include "_includes/search.html" %}
+        </div>
         {% block sidebar %}
         {% endblock %}
-        </div>
       </div>
       <div id="footer">
         <h3>Frequently Used Sites</h3>
