Setup for publishing to genome.ufl.edu
This is a bunch of changes to try and get us ready to actually publish
this new branch to genome.ufl.edu.

* Get rid of gunicorn; gevent can host the wsgi server fine. It doesn't
  handle the `X-Forwarded-For` header quite as nicely or run multiple
  worker processes but we don't need either of those.
* Config files (no residing in `etc/`)
  * apache.conf - reworked to use mod_proxy
  * init.d - LSB init.d script for starting supervisord
  * supervisord.conf config file for supervisor to actually launch our
    server

I've tried to setup the init.d script and supervisor so that Dr. Riva
could put it in place and then we can continue to administer the system
without requiring sudo access, but it will probably still be easier if
we have sudo.

--- a/npactflask/npactflask/templates/management.html
+++ b/npactflask/npactflask/templates/management.html
@@ -2,44 +2,59 @@
 {% block title %}NPACT - Management{% endblock %}
 
 {% block addScript %}
-<script src="{{ url_for('static', filename='css/custom-theme/jquery-ui.min.js')}}"></script>
-<script src="{{ url_for('static', filename='bower_components/qtip2/jquery.qtip.min.js')}}"></script>
-<script type="text/javascript">
-</script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer="true"></script>
 {% endblock %}
 
 {%block content %}
 <div class="contentPadding">
-  <h2>NPACT - Management</h2>
-  <div id="msgpane" class="ui-corner-all">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    {% for message in messages %}
-    <div class="message">
-      <p class="ui-state-highlight ui-corner-all ui-state-error">
-        {{ message }}</p>
-    </div>
+  <div class="page-header">
+    <h2>NPACT - Management</h2>
+  </div>
+  <div id="msgpane">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% for category,message in messages %}
+    <div class="alert alert-{{category}}" role="alert">{{message}}</div>
     {% endfor %}
-    {% endif %}
     {% endwith %}
   </div>
 
-  <form  method="POST">
-    <h3>Cleanup</h3>
-    <div>
-      <p>This needs to be done from time to time to help prevent disk space usage from going crazy</p>
-      <p>
-        <label>Cleanup files older than:
-          <input type="text" name="days" size="2" value="{{ default_atime }}"/> days.
-        </label>
-        <button type="submit" name="action" value="cleanup">Run Cleanup</button>
-      </p>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3>Cleanup</h3>
     </div>
-    <div>
-      <label>Cleanout library:</label>
-      <button type="submit" name="action" value="clear-library">Clear Library</button>
+    <div class="panel-body">
+    <form  method="POST" class="form-inline">
+      <div>
+        <p>This needs to be done from time to time to help prevent disk space usage from going crazy</p>
+          <label>Cleanup uploads/generated files older than:
+            <input type="text" name="days" size="2" value="{{ default_atime }}" class="form-control"> days.
+          </label>
+          <button type="submit" name="action" value="cleanup" class="btn btn-default">
+            Run Cleanup
+          </button>
+      </div>
+      <div>
+        <label>Cleanout library:</label>
+        <button type="submit" name="action" value="clear-library" class="btn btn-default">
+          Clear Library
+        </button>  (saved copies of gbk from Accession Numbers)
+      </div>
+    </form>
     </div>
-  </form>
+  </div>
+  <h3>WSGI Environment</h3>
+        <pre>
+        {% for k,v in environ.items() -%}
+        {{k}}={{v}}
+        {% endfor %}
+      </pre>
 
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      WSGI environment
+    </div>
+    <div class="panel-body">
+    </div>
+  </div>
 </div>
 {%endblock content %}
