New infrastructure for zoom window popup

--- a/npactflask/npactflask/templates/processing.html
+++ b/npactflask/npactflask/templates/processing.html
@@ -24,6 +24,7 @@
 <script type="text/javascript" src="{{vSTATIC('js/graphs/grapher.js')}}" defer></script>
 <script type="text/javascript" src="{{vSTATIC('js/graphs/graph.js')}}" defer></script>
 <script type="text/javascript" src="{{vSTATIC('js/graphs/config.js')}}" defer></script>
+<script type="text/javascript" src="{{vSTATIC('js/graphs/zoomwindow.js')}}" defer></script>
 
   <script type="text/javascript">
   angular.module('npact')
