--- a/npactflask/npactflask/static/css/style.css
+++ b/npactflask/npactflask/static/css/style.css
@@ -1,10 +1,4 @@
-* { margin:0; padding:0; }
-
-body {
-   background:#fff url(../images/bg.jpg) repeat-x;
-   text-align:center;
-   padding:0 20px;
-}
+body {   background:#fff url(../images/bg.jpg) repeat-x; }
 
 a { text-decoration:none; }
 
@@ -21,7 +15,8 @@ th { color:#222; font-size: .75em; }
 
 th,td { padding: 3px; }
 
-ul { list-style: none; }
+ul { list-style: none; margin: 0; padding: 0; }
+.panel-body ul { margin: 0 20px; }
 
 p#dept {
    position: relative;
@@ -100,10 +95,6 @@ p#uf a span{
    font-size:18px;
 }
 
-#content ul {
-   margin: 10px;
-}
-
 #content li {
    line-height: 110%;
    list-style:disc;
@@ -137,10 +128,6 @@ p#uf a span{
    text-align:center;
 }
 
-#content ul {
-   margin:15px;
-}
-
 #footer {
    background-color:#fff;
    border-top:1px solid #d1d1d1;
@@ -165,7 +152,6 @@ p#uf a span{
    float:left;
    font-size:85%;
    line-height:1.4em;
-   width:550px;
 }
 
 #footerHome span {
@@ -189,17 +175,6 @@ p#uf a span{
 
 #mainContainer {
    background:#fff url(../images/bg_priNav.jpg) repeat-x;
-   max-width:1300px;
-   min-width:1000px;
-   margin:0 auto;
-   padding-top:10px;
-   position:relative;
-   text-align:left;
-   width:100%;
-}
-
-* html #mainContainer {
-   background-position: 249px 0;
 }
 
 #leftCol {
@@ -233,10 +208,6 @@ p#uf a span{
    letter-spacing:1px;
    padding:7px 0 6px 23px;
    width:88%;
-}
-
-* html #priNav li a, * html #priNav #active{
-   width:248px;
 }
 
 #priNav #active {
@@ -344,19 +315,12 @@ button.Start { clear:both; margin: 8px;}
    display: inline-block; 
    padding: 4px 10px 6px;
 }
-#printControls .ui-icon-print {margin-top: 1px;}
+
 #printConfirm p {
    font-size: 14px;
    text-align: left;
    margin: 10px 10px;
 }
-
-
-.ui-widget-header {
-   color: #fff;
-}
-.ui-front {box-shadow: 0px 1px 8px #000;}
-.ui-front .ui-button {border:none; background: #7084D3;}
 
 
 /* Graph Controls */
