Persist Zoomwindow onto querystring
this fleshes out the zoomwindow structure more and implements the share
link which persists it onto the querystring. This also makes
testing/development faster since i can just refresh the page and have
the window pop back up automatically.

I tried to standardize what the focus data is and created a new service
`FocusData` that is in charge of serializing and deserializing that to
the querystring.

re #986

--- a/npactflask/npactflask/static/css/style.css
+++ b/npactflask/npactflask/static/css/style.css
@@ -428,6 +428,12 @@ checkbox-list#profile-options>label {
    text-align: left;
 }
 
+.zoomwindow ul.nav-stacked a {
+   padding-top: 0;
+   padding-bottom: 0;
+}
+
+
 /* Form styles */
 
 #startforms { min-height:275px; }
