--- a/npactflask/npactflask/static/css/style.css
+++ b/npactflask/npactflask/static/css/style.css
@@ -428,10 +428,15 @@ checkbox-list#profile-options>label {
    text-align: left;
 }
 
+.zoomwindow ul.nav-stacked > li {margin: 0;}
 .zoomwindow ul.nav-stacked a {
    padding-top: 0;
    padding-bottom: 0;
 }
+.zoomwindow .navbar { margin-bottom:6px;}
+.zoomwindow .navbar .navbar-header {max-width:200px;}
+.zoomwindow .navbar .navbar-form {  padding: 0; }
+.zoomwindow .navbar label { margin-left: 6px; }
 
 
 /* Form styles */
