Sorted out code for syncing tracks
 * Made save_track entrypoint in run.py to post tracks to
  * returns the new trackUrl for updating the query string
 * centralized loading and saving Tracks in a TrackSyncer Service
 * when loading a track attach a saveTrack function to it that can write
   it back to the server
 * Five new graph config parameters for hitsTrack, neworfsTrack,
   modifiedTrack, exportedTrack, customTrack

TODO:
 * Figure out the upload root properly (might be done, needs review)
 * Use returned filename to update the URL / download links
 * use the url config to load files if they are there otherwise
   default to what it is doing

re Programming:#985 (4)

--- a/npactflask/npactflask/templates/processing.html
+++ b/npactflask/npactflask/templates/processing.html
@@ -33,6 +33,7 @@
       .constant('STATUS_BASE_URL', '{{status_base}}')
       .constant('KICKSTART_URL', '{{kickstart}}')
       .constant('TRANSLATE_URL', '{{translate}}')
+      .constant('SAVE_TRACK_URL', '{{save_track}}')
       .constant('FETCH_BASE_URL', '{{fetch_base}}')
       .constant('STATIC_BASE_URL', '{{STATIC_BASE}}');
   </script>
