Make `span[contenteditable]` change the cursor
This helps provide a visual cue that the area is editable.

--- a/npactflask/npactflask/static/css/style.css
+++ b/npactflask/npactflask/static/css/style.css
@@ -529,3 +529,5 @@ form select.form-control,
 /* Error messages */
 .message { border: 1px dotted #DDD;}
 .alert { font-size: 18px; margin-bottom: 5px;}
+
+span[contenteditable] { cursor: text; }
