Replace npact People section content
re Programming:#1005

--- a/npactflask/npactflask/templates/base.html
+++ b/npactflask/npactflask/templates/base.html
@@ -35,11 +35,8 @@
             <li><a href="http://www.ufgi.ufl.edu/">Genetics Institute at UF</a></li>
           </ul>
           <h4>People</h4>
-          <ul>
-            <li><a href="http://brocchieri.mgm.ufl.edu/">Luciano Brocchieri (PI)</a></li>
-            <li><a href="#">Steve M. Oden (Postdoctoral student)</a></li>
-            <li><a href="#">Eric Hernandez (Programmer)</a></li>
-          </ul>
+          <p style="font-size:.9em;">
+            NPACT was designed by <a href="http://brocchieri.mgm.ufl.edu/">Luciano Brocchieri</a>, Assistant Professor at the <a href="http://www.ufgi.ufl.edu/">Department of molecular Genetics & Microbiology and Genetics Institute, University of Florida</a>, and developed by Luciano Brocchieri and at <a href="http://www.acceleration.net">Accelerated Data Works, Inc. (Acceleration)</a>, Gainesville FL, under contract with the University of Florida.</p>
           {% include "_includes/search.html" %}
         </div>
         {% block sidebar %}
