Zoom window linking
 * save, & cancel buttons work
 * TODO: delete needs some work
 * Auto update url / share link with zoom info
 * cdsidx is always on tracks
 * saving a track ensures that the page will reload the saved track
 * TODO: when reloading we end up with the original track plus any
   edited ones, which makes it appear that we are always adding new
   modified tracks

re Programming:#985 (3)

--- a/npactflask/npactflask/static/css/style.css
+++ b/npactflask/npactflask/static/css/style.css
@@ -18,6 +18,8 @@ th,td { padding: 3px; }
 ul { list-style: none; margin: 0; padding: 0; }
 .panel-body ul { margin: 0 20px; }
 
+.clearer, .killfloat, .kill-float {clear:both; color:transparent; background-color:transparent;}
+
 p#dept {
    position: relative;
    height: 40px;
@@ -436,7 +438,8 @@ checkbox-list#profile-options>label {
 .zoomwindow .navbar { margin-bottom:6px;}
 .zoomwindow .navbar .navbar-header {max-width:200px;}
 .zoomwindow .navbar .navbar-form {  padding: 0; }
-.zoomwindow .navbar label { margin-left: 6px; }
+   .zoomwindow .navbar label { margin-left: 6px; }
+   .zoomwindow .persist.buttons{float:left;}
 
 
 /* Form styles */
