--- a/npactflask/npactflask/templates/base.html
+++ b/npactflask/npactflask/templates/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/print.css') }}" media="print">
     <script type="text/javascript" src="{{ vSTATIC('bower_components/jquery/dist/jquery.min.js') }}"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     {% block addScript %}{% endblock %}
   </head>
   <body ng-app="npact">
